Basic payment functionality.
More work needs to be done with the postback URL cancelling, etc.
but this is a working start.

--- a/app/views/collections/show.html.slim
+++ b/app/views/collections/show.html.slim
@@ -1,5 +1,10 @@
 h1 = @collection.name
 
-ul
-  - @collection.products.each do |product|
-    li = product.name
+= form_for(@order) do |f|
+  ul
+    = f.fields_for(:purchases) do |fields|
+      li
+        = fields.check_box :product_id, {checked: false}, fields.object.product_id.to_s, nil
+        = fields.label :product_id, fields.object.product.name
+
+  button type="submit" Continue
