--- a/app/views/layouts/undergrad.html.erb
+++ b/app/views/layouts/undergrad.html.erb
@@ -68,7 +68,11 @@
 </div>
 
 <div class="grid-12">
-<%= yield %>
+  <% flash.each do |name, msg| -%>
+    <%= content_tag :div, msg, class: name %>
+  <% end -%>
+
+  <%= yield %>
 </div>
 
     </div>
