--- a/app/views/offerings/show.html.slim
+++ b/app/views/offerings/show.html.slim
@@ -4,7 +4,7 @@ h1 = @offering.name
   ul
     = f.fields_for(:purchases) do |fields|
       li
-        = fields.check_box :product_id, {checked: false}, fields.object.product_id.to_s, nil
+        = fields.check_box :product_id, {checked: fields.object.slug == params[:product]}, fields.object.product_id.to_s, nil
         = fields.label :product_id, fields.object.product.name
 
   button type="submit" Continue
