Changed some wording on the Smart Start page, moved from css to scss, js to coffee script, added bootstrap button stylings

--- a/app/views/layouts/smart_start.html.erb
+++ b/app/views/layouts/smart_start.html.erb
@@ -8,7 +8,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>Smart Start Program &lsaquo; Undergrad | Biola University</title>
 
-
+  <%= stylesheet_link_tag 'application', media: 'all' %>
 
   <link rel="icon" type="image/png" href="//media.biola.edu/undergrad/static/biola/img/biola-icon.png" />
   <link rel="apple-touch-icon-precomposed" href="//media.biola.edu/undergrad/static/biola/img/biola-touch-icon.png" />
