--- a/app/views/offerings/show.html.slim
+++ b/app/views/offerings/show.html.slim
@@ -1,15 +1,19 @@
-h1 = @offering.name
-
+h1 = @offering.name + " Registration"
+h2 = "Hello " + current_user.name
+p.lead = "Thank you for your interest in " + @offering.name
 - if @order.preflight_passed?
   = form_for(@order) do |f|
+    h3 Registration
     = f.hidden_field :offering_id
     ul
       = f.fields_for(:purchases) do |fields|
-        li
+        li style="list-style: none;"
           = fields.check_box :product_id, {checked: fields.object.slug == params[:product]}, fields.object.product_id.to_s, nil
-          = fields.label :product_id, fields.object.product.name
+          strong =' fields.label :product_id, fields.object.product.name
+          | ,
+          = fields.object.product.description
 
-    button type="submit" Continue
+    button type="submit" class="btn btn-default" Continue
 
 - else
   h2 Unable to continue
