--- a/app/views/layouts/smart_start.html.erb
+++ b/app/views/layouts/smart_start.html.erb
@@ -60,7 +60,7 @@
   <div id="ugPage" class="full">
     <div class="wrap1">
 
-<div class="pageHead" id="pageHeadHome">
+<div class="pageHead" id="pageHeadHome" style="margin-left: -10px; margin-right: -30px;">
   <div class="grid-12 pad-2">
     <p class="image"><img src="//media.biola.edu/undergrad/static/smartstart/images/mouse-pointer.png" width="194" height="210" style="margin-top: -100px; margin-bottom: -50px;" /></p>
     <h1 id="pageTitle">Smart Start Program</h1>
