Filters for orders#index

--- a/app/assets/stylesheets/admin/application.css.scss
+++ b/app/assets/stylesheets/admin/application.css.scss
@@ -4,9 +4,9 @@
  *= requre custom_bootstrap
  *= require_self
  *= require_tree ./resources
+ *= require_tree ./shared
  */
 
-.nav > li > a {padding: 5px 15px;}
 .small-lead { font-size: 15px; margin-bottom: 0px; }
 .page-lead { margin-bottom: 0; }
 .text-disabled { color: #999; }
