--- a/app/views/admin/users/_table.html.slim
+++ b/app/views/admin/users/_table.html.slim
@@ -1,5 +1,5 @@
 .row
-  table.table.table-striped.table-hover
+  table.table.table-striped.table-hover.table-responsive
     thead
       tr
         th Name
