--- a/app/views/layouts/smart_start.html.erb
+++ b/app/views/layouts/smart_start.html.erb
@@ -24,6 +24,15 @@
 
   <link rel="stylesheet" href="//media.biola.edu/undergrad/static/smartstart/main.css?v=1" type="text/css" media="screen" />
 
+  <style>
+    .errorsNotice {
+      background: none repeat scroll 0 0 #FFCCCC;
+      border: 1px solid #FF7777;
+      margin: 5px 10px 10px;
+      padding: 10px 0 10px 10px;
+    }
+  </style>
+
 
 </head>
 
@@ -69,7 +78,7 @@
 
 <div class="grid-12">
   <% flash.each do |name, msg| -%>
-    <%= content_tag :div, msg, class: name %>
+    <%= content_tag :div, msg, class: "errorsNotice #{name}" %>
   <% end -%>
 
   <%= yield %>
