--- a/app/views/layouts/smart_start.html.erb
+++ b/app/views/layouts/smart_start.html.erb
@@ -31,6 +31,18 @@
       margin: 5px 10px 10px;
       padding: 10px 0 10px 10px;
     }
+
+    ul.products li {
+      margin-bottom: 20px;
+    }
+
+    ul.products li input[type=checkbox] {
+      float: left;
+    }
+    ul.products li label {
+      display: block;
+      padding-left: 20px;
+    }
   </style>
 
 
