Fix undergrad.biola.edu CSS change

--- a/app/views/layouts/smart_start.html.erb
+++ b/app/views/layouts/smart_start.html.erb
@@ -108,7 +108,7 @@
     <div class="wrap1">
 
       <div class="pageHead" id="pageHeadCourse" style="margin-left: -10px; margin-right: -30px; margin-bottom: 20px;">
-        <div class="nav">
+        <div class="navPages" style="text-align: left;">
           <a href="http://undergrad.biola.edu/smartstart/">&larr; Back to Overview</a>
         </div>
       </div>
