Update contact info in summer_courses layout

--- a/app/views/layouts/summer_courses.html.erb
+++ b/app/views/layouts/summer_courses.html.erb
@@ -135,10 +135,10 @@
           <p style="text-align: left;"><em>For questions contact:</em></p>
           <%= image_tag 'graydon-cress.png' %>
           <h2>Graydon Cress</h2>
-          <h3>Assistant Director, Student Success</h3>
+          <h3>Assistant Director, Academic Advising</h3>
 
           <p>
-            (562) 903-4782<br/>
+             (562) 944-0351 ext. 5331<br/>
             <%= mail_to('graydon.cress@biola.edu') %>
           </p>
         </div>
