Add ability to warn about certain orders
without preventing an order from being placed.

--- a/app/views/orders/show.html.slim
+++ b/app/views/orders/show.html.slim
@@ -1,3 +1,6 @@
+- @order.warnings.each do |message|
+  p.error = message
+
 - if @order.open?
   .lead style="font-size: 15px;" Please confirm your registration below.
 - elsif @order.complete?
