Order purchases on offering#show by product names

--- a/app/views/offerings/show.html.slim
+++ b/app/views/offerings/show.html.slim
@@ -5,7 +5,7 @@ p.lead = "Thank you for your interest in " + @offering.name
     h3 Registration
     = f.hidden_field :offering_id
     ul.products
-      = f.fields_for(:purchases) do |fields|
+      = f.fields_for(:purchases, @order.purchases.sort_by{|p| p.product.name}) do |fields|
         li style="list-style: none;"
           =' fields.check_box :product_id, {checked: fields.object.slug == params[:product], disabled: fields.object.product.sold_out?}, fields.object.product_id.to_s, nil
           = fields.label :product_id do
