Change contact info for summer_courses
It was Graydon Cress now it's Alex Castro

--- a/app/views/layouts/summer_courses.html.erb
+++ b/app/views/layouts/summer_courses.html.erb
@@ -133,13 +133,13 @@
 
         <div id="contact" class="aside">
           <p style="text-align: left;"><em>For questions contact:</em></p>
-          <%= image_tag 'graydon-cress.png' %>
-          <h2>Graydon Cress</h2>
-          <h3>Assistant Director, Academic Advising</h3>
+          <%= image_tag 'alex-castro.png' %>
+          <h2>Alex Castro</h2>
+          <h3>Academic Advisor</h3>
 
           <p>
-             (562) 944-0351 ext. 5331<br/>
-            <%= mail_to('graydon.cress@biola.edu') %>
+            (562) 944-0351 ext 5849<br/>
+            <%= mail_to('alex.castro@biola.edu') %>
           </p>
         </div>
       </div>
