--- a/app/views/offerings/show.html.slim
+++ b/app/views/offerings/show.html.slim
@@ -13,7 +13,8 @@ p.lead = "Thank you for your interest in " + @offering.name
             br
             = fields.object.product.description.html_safe
 
-    button type="submit" class="btn btn-default" Continue
+    div style="text-align: right"
+      button type="submit" class="btn btn-default" Continue
 
 - else
   h2 Unable to continue
