--- a/app/views/offerings/show.html.slim
+++ b/app/views/offerings/show.html.slim
@@ -1,4 +1,5 @@
-h2 = "Hello " + current_user.name
+- if current_user.try(:name).present?
+  h2 = "Hello " + current_user.name
 p.lead = "Thank you for your interest in " + @offering.name
 - if @order.preflight_passed?
   = form_for(@order) do |f|
