--- a/app/views/orders/edit.html.slim
+++ b/app/views/orders/edit.html.slim
@@ -1,9 +1,9 @@
 h2 Registration Questions
 
-- # TODO: check if any fields match what's provided by CAS
-.alert.alert-info
-  =' link_to 'Login', login_url
-  | to auto-fill the fields below
+- if current_user.nil?
+  .alert.alert-info
+    =' link_to 'Login', login_url
+    | to auto-fill the fields below
 
 p Please complete the following questions to continue your registration.
 
